--- a/ExamenDilanOsvaldoMunozVelez/SolucionCajaPopular/ServicioCajaPopular/ServicioCajaPopular.csproj
+++ b/ExamenDilanOsvaldoMunozVelez/SolucionCajaPopular/ServicioCajaPopular/ServicioCajaPopular.csproj
@@ -83,7 +83,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClienteService.svc.cs">
+    <Compile Include="ClienteService.cs">
       <DependentUpon>ClienteService.svc</DependentUpon>
     </Compile>
     <Compile Include="ICliente.cs" />
@@ -134,6 +134,9 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
