--- a/ExamenDilanOsvaldoMunozVelez/SolucionCajaPopular/ServicioCajaPopular/bin/ServicioCajaPopular.dll.config
+++ b/ExamenDilanOsvaldoMunozVelez/SolucionCajaPopular/ServicioCajaPopular/bin/ServicioCajaPopular.dll.config
@@ -12,6 +12,8 @@
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <system.serviceModel>
+    <bindings />
+    <client />
     <behaviors>
       <serviceBehaviors>
         <behavior>
